--- a/client/src/Pages/courses/courses.css
+++ b/client/src/Pages/courses/courses.css
@@ -1,133 +1,108 @@
-
-/* .courseCard{
-    width: 80vw;
-    margin: 0 10px;
-    background-color: white;
-    height: max-content;
-    font-style: none;
-    margin-bottom: 50px;
-    padding: 0 19px;
-    border-radius: 7px;
-    box-shadow: 0px 2px 5px rgb(148, 148, 148);
-} */
-
-
-.Allcourses{
-    margin-top:60px;
-    padding: 0 4rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+.finalCourses-Overlay {
+  width: 100%;
+  display: flex;
+  gap: 2em;
+  justify-content: center;
+  padding: 4em 2em 2em 2em;
 }
 
-.courseSearch input{
-        height:30px !important;
-        width:500px !important;
-        border:none;
-        border: 1px solid rgba(0, 0, 0,0.3);
-        outline: none;
-        padding-left: 15px;
-        font-size: medium;
+.coursePageOverlay {
+  width: 50vw;
 }
 
-
-
-
-.rating{
-    display: flex;
-    align-items: center;
+.Allcourses {
+  padding: 0 4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
-
- .Searchform{
-
-    margin-top: 40px;
-    display: flex;
-    
-    margin-left: 0;
-    padding: 0 7rem;
-    width: 100vw;
-    
-    height: 45px;
-    justify-content: flex-start;
-    
-    
-} 
-
-
-
-.Searchform button{
-     background-color: white;
-    height: 1.87rem;
-     border: 1px solid rgba(0,0,0,0.3);
-
+.courseSearch input {
+  height: 30px !important;
+  width: 500px !important;
+  border: none;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  outline: none;
+  padding-left: 15px;
+  font-size: medium;
 }
 
-.Searchform button:hover{
-    color: #bfbaba ;
-    cursor: pointer;
+.rating {
+  display: flex;
+  align-items: center;
 }
 
-.filtercourse{
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    flex-wrap: nowrap;
-    flex: 1;
-    position: absolute;
-    margin-left: 62%;
+.SearchformCourseReview {
+  display: flex;
+  width: 30vw;
+  gap: 2em;
+  height: 3em;
 }
-@media (max-width: 912px){
-  .filtercourse button{
+
+.Searchform button {
+  background-color: white;
+  height: 1.87rem;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.Searchform button:hover {
+  color: #bfbaba;
+  cursor: pointer;
+}
+
+.filtercourse {
+  display: flex;
+}
+
+@media (max-width: 912px) {
+  .filtercourse button {
     font-size: 0.7rem !important;
-  
+
     height: 2rem !important;
   }
-  .filtercourse{
+  .filtercourse {
     margin-left: 0;
-    
   }
-  
 }
-.filtercourse button{
-    border:none;
-    height: 2rem;
-    padding: 0 2rem;
-    background-color: white;
-    border-left:0.5px solid rgba(0,0,0,0.2);
-    border-right:0.5px solid rgba(0,0,0,0.2);
-    color: black;
-    font-size: 1rem;
-}
-
-.filtercourse button:hover{
-    background-color: rgba(0,0,0,0.1);
-}
-.filtercourse button:nth-of-type(1){
-    border-right: none;
+.filtercourse button {
+  border: none;
+  height: 2rem;
+  padding: 0 2rem;
+  background-color: white;
+  border-left: 0.5px solid rgba(0, 0, 0, 0.2);
+  border-right: 0.5px solid rgba(0, 0, 0, 0.2);
+  color: black;
+  font-size: 1rem;
 }
 
-.cardBtn{
-    border-top:0.5px solid rgba(0,0,0,0.1) ;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 44px;
-    align-items: center;
-    width: 100%;
-    height: 50px;
+.filtercourse button:hover {
+  background-color: rgba(0, 0, 0, 0.1);
 }
-.cardBtn button{
-    border:none;
-    height: 3rem;
-    margin-bottom: 0px;
-    width: 180px;
-    background-color: white;
-    border-left:0.5px solid rgba(0,0,0,0.2);
-    color: black;
-    font-size: 1rem;
+.filtercourse button:nth-of-type(1) {
+  border-right: none;
 }
-.cardBtn button:hover{
-    background-color: rgba(0,0,0,0.1);
+
+.cardBtn {
+  border-top: 0.5px solid rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
+  margin-top: 44px;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+}
+.cardBtn button {
+  border: none;
+  height: 3rem;
+  margin-bottom: 0px;
+  width: 180px;
+  background-color: white;
+  border-left: 0.5px solid rgba(0, 0, 0, 0.2);
+  color: black;
+  font-size: 1rem;
+}
+.cardBtn button:hover {
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .doubtCardMainCourse {
@@ -135,12 +110,12 @@
   padding: 10px 25px 0px 25px;
   width: 600px;
   line-height: 1.5rem;
-  border:2px solid rgba(69, 123, 157,0.3);
+  border: 2px solid rgba(69, 123, 157, 0.3);
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px,
     rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
     rgba(0, 0, 0, 0.07) 0px 16px 16px;
 }
-.doubtCardMainCourse:hover{
+.doubtCardMainCourse:hover {
   cursor: default;
 }
 .doubtCardUserCourse {
@@ -152,7 +127,7 @@
   width: 40px;
   height: 40px;
 }
-.doubtCardUserNameCourse{
+.doubtCardUserNameCourse {
   font-size: 20px;
 }
 .doubtCardUserType {
@@ -188,13 +163,11 @@
   padding: 0;
   margin: 0px;
 }
-@media (max-width: 760px){
-.MainProfileCoursePAge{
-  display: none;
+@media (max-width: 760px) {
+  .MainProfileCoursePAge {
+    display: none;
+  }
 }
-}
-
-
 
 .dropDown {
   display: none;
@@ -206,40 +179,31 @@
   flex-direction: column;
 }
 
-
-@media (max-width: 676px)
-{
-  .Searchform{
-    
+@media (max-width: 676px) {
+  .Searchform {
     display: inline;
-   
   }
 
-  .Allcourses{
+  .Allcourses {
     margin-left: -40px;
     padding-right: 3rem;
-    
   }
-  .doubtCardMainCourse{
+  .doubtCardMainCourse {
     width: 400px !important;
   }
-  .searchButn{
+  .searchButn {
     position: absolute;
     margin-left: 95%;
   }
-  
-  
- 
-
 }
-.courseSearch{
+.courseSearch {
   display: flex;
   align-items: center;
 }
-.searchButn{
+.searchButn {
   height: 1.9rem !important;
   border-radius: 0 9px 9px 0;
 }
-.courseSearch input{
+.courseSearch input {
   border-radius: 8px 0 0 8px;
 }
