--- a/client/src/Components/ProfilePage/profilepage.css
+++ b/client/src/Components/ProfilePage/profilepage.css
@@ -116,16 +116,19 @@
 
 .profile-right-collab {
   width: 20em;
-  border: 1px solid black;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   height: 30em;
-  overflow: scroll;
+  gap: 2em;
 }
 
-.collaboration-req {
-  padding: 0.5em;
+.collaboration-req-list {
+  display: flex;
+  align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 .mainProfileCourseList {
   display: flex;
